improve header nav scaling

--- a/src/index.html
+++ b/src/index.html
@@ -12,8 +12,11 @@
 
 <body>
     <header>
-        <nav><a href="">Over ons</a>
-            <a href="">Contact</a>
+        <nav>
+            <div>
+                <a href="">Over ons</a>
+                <a href="">Contact</a>
+            </div>
             <a href="">Actueel</a>
             <a href="">Milieucentrum.nl</a>
         </nav>
