fix minor adjustment to html

--- a/src/index.html
+++ b/src/index.html
@@ -17,8 +17,10 @@
                 <a href="">Over ons</a>
                 <a href="">Contact</a>
             </div>
-            <a href="">Actueel</a>
-            <a href="">Milieucentrum.nl</a>
+            <div>
+                <a href="">Actueel</a>
+                <a href="">Milieucentrum.nl</a>
+            </div>
         </nav>
     </header>
     <main>
